--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.2"
     defaultConfig {
-        applicationId "cn.edu.gdme.android.boxuegu"
+        applicationId "cn.edu.gdmec.android.boxuegu"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
