--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cn.edu.gdme.android.boxuegu">
+    package="cn.edu.gdmec.android.boxuegu">
 
     <application
         android:allowBackup="true"
@@ -9,16 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".MainActivity" />
-        <activity android:name=".activity.SplashActivity">
+        <activity android:name="cn.edu.gdmec.android.boxuegu.MainActivity" />
+        <activity android:name="cn.edu.gdmec.android.boxuegu.activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.RegisterActivity" />
-        <activity android:name=".activity.LoginActivity"></activity>
+        <activity android:name="cn.edu.gdmec.android.boxuegu.activity.RegisterActivity" />
+        <activity android:name="cn.edu.gdmec.android.boxuegu.activity.LoginActivity"></activity>
     </application>
 
 </manifest>
