--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name=".activity.UserInfoActivity" />
         <activity android:name=".activity.ChangeUserInfoActivity" />
         <activity android:name=".activity.SettingActivity" />
-        <activity android:name=".activity.ModifyPwdActivity"></activity>
+        <activity android:name=".activity.ModifyPwdActivity" />
+        <activity android:name=".activity.FindPwdActivity"></activity>
     </application>
 
 </manifest>
