未登录可播放（登录播放闪退，未完成播放记录）

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         <activity android:name=".activity.FindPwdActivity" />
         <activity android:name=".activity.ExercisesDetailActivity" />
         <activity android:name=".activity.VideoListActivity" />
-        <activity android:name=".activity.VideoPlayActivity"></activity>
+        <activity android:name=".activity.VideoPlayActivity" />
+        <activity android:name=".activity.PlayHistoryActivity"></activity>
     </application>
 
 </manifest>
